--- a/requirements-complete.txt
+++ b/requirements-complete.txt
@@ -14,6 +14,7 @@ ape-trezor==0.6.0
 ape-vyper==0.6.1
 appnope==0.1.3
 arrow==1.2.3
+astroid==2.15.6
 asttokens==2.2.1
 async-timeout==4.0.3
 attrs==23.1.0
@@ -39,6 +40,7 @@ cytoolz==0.12.2
 dataclassy==0.11.1
 decorator==5.1.1
 Deprecated==1.2.14
+dill==0.3.7
 distlib==0.3.7
 ecdsa==0.18.0
 ECPy==1.2.5
@@ -78,6 +80,7 @@ Jinja2==3.1.2
 jinja2-time==0.2.0
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
+lazy-object-proxy==1.9.0
 ledgerblue==0.1.48
 ledgereth==0.8.1
 libusb1==3.0.0
@@ -130,6 +133,7 @@ pyflakes==2.3.1
 PyGithub==1.59.1
 Pygments==2.16.1
 PyJWT==2.8.0
+pylint==2.17.5
 PyNaCl==1.5.0
 pyobjc-core==9.2
 pyobjc-framework-Cocoa==9.2
@@ -160,6 +164,7 @@ stack-data==0.6.2
 text-unidecode==1.3
 tokenlists==0.1.4
 tomli==2.0.1
+tomlkit==0.12.1
 toolz==0.12.0
 tqdm==4.66.1
 traitlets==5.9.0
