--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,14 @@ version = "0.0.1"
 description = "CLI tools for the Curve DAO"
 license = { file = "LICENSE" }
 readme = "README.md"
+# authors = [
+#     {name = "Curve DAO", email = "help@curvedao.org"},
+# ]
+# maintainers = [
+#   {name = "fiddy", email = ""},
+#   {name = "chanho", email = "chanho@curveresearch.org"}
+# ]
+requires-python = ">=3.10"
 
 keywords = [
     "ethereum",
@@ -14,7 +22,23 @@ keywords = [
     "curve finance",
 ]
 
-classifiers = ["Topic :: Software Development"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development",
+    "Framework :: Ape",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+
+[project.urls]
+Documentation = "https://curve-dao-operations.readthedocs.io"
+Repository = "https://github.com/curvefi/curve-dao-operations.git"
+Tracker = "https://github.com/curvefi/curve-dao-operations/issues"
+Changelog = "https://github.com/curvefi/curve-dao-operations/CHANGELOG.md"
 
 # Requirements
 dependencies = [
@@ -30,8 +54,10 @@ dependencies = [
     "requests",
 ]
 
+
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = ["curve_dao*"]
