--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,15 +24,16 @@ jobs:
       - name: Install Hardhat
         run: npm ci
 
-      - name: Setup Python 3.10.4
+      - name: Set up latest Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10.4
+          python-version: "3.10"
+          cache: 'pip'
 
       - name: Install Requirements
-        run: >-
-          pip install -r dev-requirements.txt
-          pip install .
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements-complete.txt
 
       - name: Run Tests
         run: ape test
