--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-eth-ape[recommended-plugins]==0.6.2
+# eth-ape[recommended-plugins]>=0.6.11
 requests
+# titanoboa[forking-recommended]
+git+https://github.com/vyperlang/titanoboa@40f5bfcc2afe212bb5a6f5026148f3625596ded7#egg=titanoboa[forking-recommended]
 
 black==22.12.0
 flake8==3.9.2
