Update to 'lite' requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,52 @@
-# eth-ape[recommended-plugins]>=0.6.11
-requests
-# titanoboa[forking-recommended]
-git+https://github.com/vyperlang/titanoboa@40f5bfcc2afe212bb5a6f5026148f3625596ded7#egg=titanoboa[forking-recommended]
-
-black==22.12.0
-flake8==3.9.2
-isort==5.10.1
-pylint==2.14.5
-astroid==2.11.7
+asttokens==2.4.0
+attrs==23.1.0
+bitarray==2.8.1
+cached-property==1.5.2
+cbor2==5.4.6
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+cytoolz==0.12.2
+eth-abi==4.2.0
+eth-account==0.9.0
+eth-bloom==2.0.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-stdlib==0.2.6
+eth-typing==3.4.0
+eth-utils==2.2.0
+exceptiongroup==1.1.3
+hexbytes==0.3.1
+hypothesis==6.84.2
+idna==3.4
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+lru-dict==1.2.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==23.1
+parsimonious==0.9.0
+pluggy==1.3.0
+py-ecc==6.0.0
+py-evm==0.7.0a4
+pycryptodome==3.18.0
+pyethash==0.1.27
+Pygments==2.16.1
+pytest==7.4.2
+regex==2023.8.8
+requests==2.31.0
+rich==13.5.2
+rlp==3.0.0
+safe-pysha3==1.0.4
+six==1.16.0
+sortedcontainers==2.4.0
+titanoboa @ git+https://github.com/vyperlang/titanoboa@723d5aa7cfb98c653a6f35e32f43f7d4873271d1
+tomli==2.0.1
+toolz==0.12.0
+trie==2.1.1
+urllib3==2.0.4
+vyper==0.3.10rc3
+zipp==3.16.2
