--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,17 +37,13 @@ classifiers = [
 
 # Requirements
 dependencies = [
-    "eth-ape>=0.5.2",
-    "ape-hardhat>=0.5.1",
-    "ape-alchemy>=0.5.0",
-    "ape-solidity>=0.5.0",
-    "ape-vyper>=0.5.0",
-    "ape-ledger>=0.5.0",
-    "ape-etherscan>=0.5.1",
-    "black",
-    "pytest",
-    "requests",
+  "vyper==0.3.10rc3",
+  "titanoboa@git+https://github.com/vyperlang/titanoboa@723d5aa7cfb98c653a6f35e32f43f7d4873271d1",
+  "requests",
 ]
+
+[project.scripts]
+decode = "curve_dao.scripts.decode:cli"
 
 [project.urls]
 Documentation = "https://curve-dao-operations.readthedocs.io"
