--- a/ape-config.yaml
+++ b/ape-config.yaml
@@ -11,9 +11,9 @@ ethereum:
   default_network: mainnet-fork
   mainnet_fork:
     default_provider: hardhat
-    transaction_acceptance_timeout: 99999999
+    transaction_acceptance_timeout: 600
   mainnet:
-    transaction_acceptance_timeout: 99999999
+    transaction_acceptance_timeout: 600
 
 hardhat:
   fork:
