--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,14 +11,7 @@ env:
 
 jobs:
   unitary:
-    # runs-on: ubuntu-22.04
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
