--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,17 +37,14 @@ classifiers = [
 
 # Requirements
 dependencies = [
-    "eth-ape>=0.5.2",
-    "ape-hardhat>=0.5.1",
-    "ape-alchemy>=0.5.0",
-    "ape-solidity>=0.5.0",
-    "ape-vyper>=0.5.0",
-    "ape-ledger>=0.5.0",
-    "ape-etherscan>=0.5.1",
+    "eth-ape[recommended-plugins]>=0.6.19",
     "black",
     "pytest",
     "requests",
 ]
+
+[project.scripts]
+decode = "curve_dao.scripts.decode:cli"
 
 [project.urls]
 Documentation = "https://curve-dao-operations.readthedocs.io"
